syntax = "proto3";
package quizzes;

option go_package = "lms-quiz-services/pb/quizzes;quizzes";

import "quizzes/option_message.proto";

message Question {
  string id = 1;
  string title = 2;
  string description = 3;
  string storage_id = 4;
  string answer_id = 5;
  string created_at = 6;
  string updated_at = 7;
  string updated_by = 8;
  repeated Option option = 9;
}